--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "@rocketseat/eslint-config": "^1.2.0",
     "@types/node": "^20.3.2",
     "eslint": "^8.43.0",
+    "prisma": "^4.16.1",
     "tsx": "^3.12.7",
     "typescript": "^5.1.5",
     "word-wrap": "^1.2.3"
