--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.16.1",
-    "fastify": "^4.18.0"
+    "fastify": "^4.18.0",
+    "zod": "^3.21.4"
   }
 }
