--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "word-wrap": "^1.2.3"
   },
   "dependencies": {
+    "@fastify/cors": "^8.3.0",
     "@prisma/client": "^4.16.1",
     "fastify": "^4.18.0",
     "zod": "^3.21.4"
