--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,6 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
+# Database
 DATABASE_URL="file:./dev.db"
+
+# Github
+GITHUB_CLIENT_ID=66ed66e058fa5411dbf9
+GITHUB_CLIENT_SECRET="ac53e009d12ec4b34500f35dc9d29f3bd2531a99"
