--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
     "@types/node": "^20.3.2",
+    "dotenv": "^16.3.1",
     "eslint": "^8.43.0",
     "prisma": "^4.16.1",
     "tsx": "^3.12.7",
@@ -22,6 +23,7 @@
   "dependencies": {
     "@fastify/cors": "^8.3.0",
     "@prisma/client": "^4.16.1",
+    "axios": "^1.4.0",
     "fastify": "^4.18.0",
     "zod": "^3.21.4"
   }
