--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@fastify/cors": "^8.3.0",
+    "@fastify/jwt": "^7.2.0",
     "@prisma/client": "^4.16.1",
     "axios": "^1.4.0",
     "fastify": "^4.18.0",
