--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.4.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "jwt-decode": "^3.1.2",
     "lucide-react": "^0.258.0",
     "next": "13.4.7",
     "postcss": "8.4.24",
